--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 </style><link rel="stylesheet" href="styles-GZKQFUSW.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-GZKQFUSW.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-IKG2KEYZ.js" type="module"></script></body>
+<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-HZF44YDE.js" type="module"></script></body>
 </html>
